--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,15 @@
 @tailwind utilities;
 
 @layer base {
+  html,
+  body,
+  #root {
+    @apply h-full w-full;
+  }
   html {
     font-family: GodoM, sans-serif;
+  }
+  body {
+    @apply bg-fixed bg-gradient-to-t from-[#1C2837] to-[#050608] text-primary;
   }
 }
