--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   html,
   body,
   #root {
-    @apply h-full w-full overflow-hidden leading-normal;
+    @apply h-full w-full overflow-hidden;
   }
   html {
     font-family: GodoM, sans-serif;
