✨ feat : vertical Sprite  애니메이션 수정 완료

--- a/src/components/ProjectPage/sprite.css
+++ b/src/components/ProjectPage/sprite.css
@@ -1,8 +1,8 @@
 @keyframes sprite {
   from {
-    background-position: 0 0%;
+    background-position: 0% 0;
   }
   to {
-    background-position: 0 100%;
+    background-position: 100% 0;
   }
 }
